test/files/neg/hk-typevar-unification.check
hk-typevar-unification.scala:16: error: inferred kinds of the type arguments ([_ <: B]Foo[_]) do not conform to the expected kinds of the type parameters (type F).
[_ <: B]Foo[_]'s type parameters do not match type F's expected parameters:
type _'s bounds <: B are stricter than type _'s declared bounds >: Nothing <: Any
  f(tcFoo)
  ^
hk-typevar-unification.scala:16: error: type mismatch;
 found   : TC[Foo]
 required: TC[F]
  f(tcFoo)
    ^
hk-typevar-unification.scala:19: error: inferred kinds of the type arguments ([_ <: B]Foo[_]) do not conform to the expected kinds of the type parameters (type F).
[_ <: B]Foo[_]'s type parameters do not match type F's expected parameters:
type _ is invariant, but type _ is declared covariant
type _'s bounds <: B are stricter than type _'s declared bounds >: Nothing <: Any
  g(tcFoo)
  ^
hk-typevar-unification.scala:19: error: type mismatch;
 found   : TC[Foo]
 required: TC[F]
  g(tcFoo)
    ^
4 errors
